--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@google/genai": "^0.12.0",
+    "@tailwindcss/cli": "^4.1.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
